<fix>[header]: <description
Resolves: ZSTAC-64275

Change-Id: I707862756c786e69746467746577657465766f6b

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -36,6 +36,9 @@
         <module>vhost</module>
         <module>expon</module>
         <module>externalStorage</module>
+        <module>cbd</module>
+        <module>curve</module>
+        <module>zbs</module>
     </modules>
     <dependencies>
         <dependency>
