<feature>[plugin]: add zbs plugin
Resolves: ZSTAC-64686

Change-Id: I72696b75717262646c706a6c6c6166656e666774

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -36,6 +36,7 @@
         <module>vhost</module>
         <module>expon</module>
         <module>externalStorage</module>
+        <module>zbs</module>
     </modules>
     <dependencies>
         <dependency>
