<feature>[audit]: Audit add clientIp, clientBrowser
Audit add clientIp, clientBrowser

Resolves: ZSTAC-65086

Change-Id: I6e71646a7566636d737a746f7564616a636b6966
(cherry picked from commit 4dd57003137ce289d5a504bb2bb1a3035918141f)

--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -130,6 +130,14 @@
             <artifactId>retree</artifactId>
             <version>1.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
