<feature>[account-import]: add account import module
Account import module is general third-party user import abstraction.

Resolves: ZSV-5951
Related: ZSV-5531

DBImpact
GlobalConfigImpact

Change-Id: I636e636c62766471776c74687668626663766d6e

<feature>[account-import]: add AccountImportsManager implementation

Resolves: ZSV-5951
Related: ZSV-5531

Change-Id: I6f657773626e67666a73676a65666279636e6277

--- a/pom.xml
+++ b/pom.xml
@@ -508,6 +508,12 @@
         </dependencies>
     </dependencyManagement>
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <resources>
             <resource>
